--- a/Resources/Maps/_NF/Shuttles/Nfsd/marauder.yml
+++ b/Resources/Maps/_NF/Shuttles/Nfsd/marauder.yml
@@ -9045,7 +9045,7 @@ entities:
     - type: Transform
       pos: -0.5,-0.5
       parent: 1
-- proto: SignSecurity
+- proto: SignNfsd
   entities:
   - uid: 1459
     components:
