Add guidebook entries for Eagle, Phoenix

--- a/Resources/Prototypes/_NF/Guidebook/shipyard.yml
+++ b/Resources/Prototypes/_NF/Guidebook/shipyard.yml
@@ -18,6 +18,7 @@
   - ShipyardChisel
   - ShipyardComet
   - ShipyardConstruct
+  - ShipyardEagle
   - ShipyardGarden
   - ShipyardGasbender
   - ShipyardGourd
@@ -34,6 +35,7 @@
   - ShipyardMcCargo
   - ShipyardMcDelivery
   - ShipyardPathfinder
+  - ShipyardPhoenix
   - ShipyardPioneer
   - ShipyardProspector
   - ShipyardSearchlight
@@ -110,6 +112,11 @@
   id: ShipyardConstruct
   name: guide-entry-shipyard-construct
   text: "/ServerInfo/_NF/Guidebook/Shipyard/Construct.xml"
+
+- type: guideEntry
+  id: ShipyardEagle
+  name: guide-entry-shipyard-eagle
+  text: "/ServerInfo/_NF/Guidebook/Shipyard/Eagle.xml"
 
 - type: guideEntry
   id: ShipyardGarden
@@ -195,6 +202,11 @@
   id: ShipyardPioneer
   name: guide-entry-shipyard-pioneer
   text: "/ServerInfo/_NF/Guidebook/Shipyard/Pioneer.xml"
+
+- type: guideEntry
+  id: ShipyardPhoenix
+  name: guide-entry-shipyard-phoenix
+  text: "/ServerInfo/_NF/Guidebook/Shipyard/Phoenix.xml"
 
 - type: guideEntry
   id: ShipyardProspector
