Filled wall lockers: inherit through parents

--- a/Resources/Prototypes/_NF/Entities/Structures/Storage/Closets/wall_lockers.yml
+++ b/Resources/Prototypes/_NF/Entities/Structures/Storage/Closets/wall_lockers.yml
@@ -28,7 +28,7 @@
   - type: LockVisuals
   - type: Appearance
   - type: EntityStorageVisuals
-    stateBase: base
+    stateBaseClosed: base
     stateDoorOpen: open
     stateDoorClosed: door
   - type: GenericVisualizer
