--- a/Resources/Prototypes/_NF/Entities/Structures/Storage/Closets/wall_lockers_department.yml
+++ b/Resources/Prototypes/_NF/Entities/Structures/Storage/Closets/wall_lockers_department.yml
@@ -155,57 +155,20 @@
 
 - type: entity
   id: LockerWallColorMedicalDoctorFilled
-  parent: LockerWallColorMedical
+  parent:
+  - LockerWallColorMedical
+  - BaseWallmount
+  - LockerMedicalFilled
   name: medical doctor's wall locker
   suffix: Filled, Frontier
-  components:
-  - type: StorageFill
-    contents:
-      - id: HandheldHealthAnalyzer
-#        prob: 0.6
-      - id: ClothingHandsGlovesLatex
-#      - id: ClothingHeadsetMedical # Frontier
-      - id: ClothingEyesHudMedical # Frontier
-#      - id: ClothingBeltMedical
-#      - id: ClothingHeadHatSurgcapGreen
-#        prob: 0.1
-#        orGroup: Surgcaps
-#      - id: ClothingHeadHatSurgcapPurple
-#        prob: 0.05
-#        orGroup: Surgcaps
-#      - id: ClothingHeadHatSurgcapBlue
-#        prob: 0.90
-#        orGroup: Surgcaps
-#      - id: UniformScrubsColorBlue
-#        prob: 0.5
-#        orGroup: Surgshrubs
-#      - id: UniformScrubsColorGreen
-#        prob: 0.1
-#        orGroup: Surgshrubs
-#      - id: UniformScrubsColorPurple
-#        prob: 0.05
-#        orGroup: Surgshrubs
-      - id: ClothingMaskSterile
-      - id: ClothingBeltMedicalFilled # Frontier
-      
+
 - type: entity
   id: LockerWallColorMedicalFilled
-  parent: LockerWallColorMedical
+  parent:
+  - LockerWallColorMedical
+  - LockerWallMedicalFilled
   name: medicine wall locker
   suffix: Filled, Frontier
-  components:
-  - type: StorageFill
-    contents:
-      - id: BoxSyringe
-      - id: EpinephrineChemistryBottle
-        amount: 1
-      - id: Brutepack
-        amount: 2
-      - id: Ointment
-        amount: 2
-      - id: Bloodpack
-        amount: 2
-      - id: Gauze
 
 - type: entity
   id: LockerWallColorChemistry
@@ -234,26 +197,12 @@
 
 - type: entity
   id: LockerWallColorChemistryFilled
-  suffix: Filled, Frontier  
-  parent: LockerWallColorChemistry
+  suffix: Filled, Frontier
+  parent:
+  - LockerWallColorChemistry
+  - BaseWallmount
+  - LockerChemistryFilled
   name: chemistry wall locker
-  components:
-  - type: StorageFill
-    contents:
-      - id: BoxSyringe
-      - id: BoxBeaker
-        amount: 2
-      - id: BoxPillCanister
-      - id: BoxBottle
-      - id: BoxVial
-      - id: ChemBag
-      - id: ClothingHandsGlovesLatex
-#      - id: ClothingHeadsetMedical # Frontier
-      - id: ClothingMaskSterile
-#      - id: HandLabeler # Frontier
-      - id: ClothingEyesGlassesChemical
-      - id: SheetPlasma1
-        amount: 3
 
 ## Service
 - type: entity
