Empress/wasp, brigmed access, AME, medsec door

--- a/Resources/Maps/_NF/Shuttles/Nfsd/wasp.yml
+++ b/Resources/Maps/_NF/Shuttles/Nfsd/wasp.yml
@@ -897,7 +897,7 @@ entities:
       rot: 1.5707963267948966 rad
       pos: 13.5,5.5
       parent: 1
-- proto: AirlockMedicalGlass
+- proto: AirlockMedicalGlassSecurity
   entities:
   - uid: 16
     components:
