--- a/Resources/Maps/_NF/Shuttles/Nfsd/wasp.yml
+++ b/Resources/Maps/_NF/Shuttles/Nfsd/wasp.yml
@@ -897,7 +897,7 @@ entities:
       rot: 1.5707963267948966 rad
       pos: 13.5,5.5
       parent: 1
-- proto: AirlockMedicalGlassSecurity
+- proto: AirlockMedicalGlassLockedSecurity
   entities:
   - uid: 16
     components:
@@ -8091,7 +8091,7 @@ entities:
     - type: Transform
       pos: 8.5,-18.5
       parent: 1
-- proto: hydroponicsTray
+- proto: hydroponicsTrayAnchored
   entities:
   - uid: 1175
     components:
