--- a/Resources/Maps/_NF/Shuttles/caduceus.yml
+++ b/Resources/Maps/_NF/Shuttles/caduceus.yml
@@ -528,6 +528,16 @@ entities:
             189: 1,-17
             190: -1,-17
         - node:
+            color: '#3C44AAFF'
+            id: DeliveryGreyscale
+          decals:
+            280: 12,-13
+        - node:
+            color: '#B02E26FF'
+            id: DeliveryGreyscale
+          decals:
+            281: 11,-13
+        - node:
             zIndex: 100
             color: '#5895B9FF'
             id: DiagonalCheckerBOverlay
@@ -700,161 +710,158 @@ entities:
       version: 2
       data:
         tiles:
-          0,-3:
-            0: 65535
-          0,-2:
-            0: 65535
-          0,-1:
-            0: 65523
-            1: 12
-          0,0:
-            0: 65535
-          0,1:
-            0: 65535
-          0,2:
-            0: 65531
-            1: 4
           0,-4:
-            0: 32767
-            1: 32768
+            0: 48954
+          -1,-4:
+            0: 57339
+          0,-3:
+            0: 43698
+          -1,-3:
+            0: 56824
+          0,-2:
+            0: 65470
+          -1,-2:
+            0: 49080
+          0,-1:
+            0: 65327
+          -1,-1:
+            0: 65419
+          0,0:
+            0: 12287
+          0,-5:
+            0: 41472
           1,-4:
-            0: 61439
-            1: 4096
+            0: 57295
           1,-3:
-            0: 65407
-            2: 128
+            0: 65520
           1,-2:
-            0: 65535
+            0: 13087
+            1: 32768
           1,-1:
-            0: 13175
-            3: 1024
+            0: 4355
+            1: 1088
+          1,-5:
+            0: 61440
+            1: 128
+          1,0:
+            0: 273
+            1: 1024
           2,-4:
-            0: 65535
-          2,-3:
-            0: 5119
+            0: 48063
           2,-2:
-            0: 17
+            1: 16
+          2,-3:
+            1: 704
           3,-4:
             0: 65535
           3,-3:
-            0: 249
-            1: 6
-            3: 3584
-          0,3:
-            0: 140
-          1,0:
-            0: 63283
-          1,1:
-            0: 65535
-          1,2:
-            0: 65535
-          1,3:
-            0: 4095
-          2,0:
-            0: 13088
-          2,1:
-            0: 13107
-          2,2:
-            0: 4371
-          2,3:
-            0: 273
-          0,-5:
-            0: 65280
-          1,-5:
-            0: 49092
-            1: 16384
-          2,-5:
-            0: 65280
-          3,-5:
-            0: 57340
-            1: 8192
-          3,-6:
-            0: 32768
-          -3,0:
-            0: 34944
-          -3,1:
-            0: 34952
-          -3,2:
-            0: 8
-          -2,0:
-            0: 64908
-          -2,1:
-            0: 65535
-          -2,2:
-            0: 65535
-          -2,3:
-            0: 4095
-          -1,0:
-            0: 65535
-          -1,1:
-            0: 65023
-            1: 512
-          -1,2:
-            0: 65519
             1: 16
+            0: 14
+          3,-5:
+            0: 63688
+            1: 52
+          4,-4:
+            0: 4437
+          4,-3:
+            0: 1
+            1: 36
+          -1,0:
+            0: 36863
+          0,1:
+            0: 12287
+          -1,1:
+            0: 36863
+          0,2:
+            0: 1911
+          -1,2:
+            0: 7645
+          0,3:
+            1: 12
+          1,1:
+            0: 12159
+          1,2:
+            0: 65527
+          1,3:
+            1: 3600
+            0: 14
+          2,1:
+            0: 771
+          2,3:
+            1: 272
+          2,0:
+            1: 288
+          2,2:
+            1: 2
+          -1,-5:
+            0: 47104
+          2,-5:
+            1: 3840
+          3,-6:
+            1: 32768
+          4,-6:
+            0: 4096
+            1: 258
+          4,-5:
+            0: 4211
+          -3,0:
+            1: 128
+          -2,0:
+            1: 1284
+          -3,1:
+            0: 2056
+          -2,1:
+            0: 36815
+          -3,2:
+            1: 8
+          -2,2:
+            0: 61164
+          -2,3:
+            1: 2832
+            0: 14
           -1,3:
-            0: 279
+            1: 22
           -4,-4:
             0: 65535
-          -4,-3:
-            0: 255
-            3: 3840
-          -3,-4:
-            0: 65535
-          -3,-3:
-            0: 2303
-          -2,-4:
-            0: 65535
-          -2,-3:
-            0: 64991
-            1: 544
-          -2,-2:
-            0: 60095
-            1: 1088
-          -2,-1:
-            0: 35020
-            3: 1024
-          -1,-4:
-            0: 49151
-            1: 16384
-          -1,-3:
-            0: 65535
-          -1,-2:
-            0: 65535
-          -1,-1:
-            0: 65279
-            4: 256
-          -4,-6:
-            0: 12544
           -4,-5:
-            0: 65527
-          -3,-5:
-            0: 65296
-          -2,-5:
-            0: 65380
-          -1,-5:
-            0: 65280
-          -5,-4:
-            0: 52428
+            0: 62067
+            1: 132
+          -4,-3:
+            0: 15
           -5,-3:
-            0: 140
-          -5,-7:
-            0: 16384
-          -5,-6:
-            0: 52428
+            1: 132
+          -3,-4:
+            0: 57341
+          -3,-3:
+            1: 2160
+          -3,-5:
+            0: 4096
+            1: 3600
+          -2,-4:
+            0: 61438
+          -2,-3:
+            0: 61152
+          -2,-2:
+            1: 8208
+            0: 36032
+          -2,-5:
+            0: 57344
+            1: 288
+          -2,-1:
+            1: 1088
+            0: 8
+          -4,-6:
+            1: 8448
+            0: 4096
           -5,-5:
-            0: 52428
-          4,-4:
-            0: 30583
-          4,-3:
-            0: 55
-            3: 256
-          4,-6:
-            0: 30566
-          4,-5:
-            0: 30583
+            0: 200
+          -5,-4:
+            1: 68
+          -5,-7:
+            1: 16384
+          -5,-6:
+            1: 8
           4,-7:
-            0: 16384
+            1: 16384
         uniqueMixes:
         - volume: 2500
           temperature: 293.15
@@ -872,55 +879,10 @@ entities:
           - 0
           - 0
         - volume: 2500
-          temperature: 293.14996
-          moles:
-          - 20.078888
-          - 75.53487
-          - 0
-          - 0
-          - 0
-          - 0
-          - 0
-          - 0
-          - 0
-          - 0
-          - 0
-          - 0
-        - volume: 2500
-          temperature: 293.1499
-          moles:
-          - 18.472576
-          - 69.49208
-          - 0
-          - 0
-          - 0
-          - 0
-          - 0
-          - 0
-          - 0
-          - 0
-          - 0
-          - 0
-        - volume: 2500
-          temperature: 293.15
+          immutable: True
           moles:
           - 0
           - 0
-          - 0
-          - 0
-          - 0
-          - 0
-          - 0
-          - 0
-          - 0
-          - 0
-          - 0
-          - 0
-        - volume: 2500
-          temperature: 293.14996
-          moles:
-          - 21.824879
-          - 82.10312
           - 0
           - 0
           - 0
@@ -1072,22 +1034,6 @@ entities:
       - 856
 - proto: AirCanister
   entities:
-  - uid: 895
-    components:
-    - type: Transform
-      anchored: True
-      pos: 12.5,-12.5
-      parent: 1
-    - type: Physics
-      bodyType: Static
-  - uid: 896
-    components:
-    - type: Transform
-      anchored: True
-      pos: 11.5,-12.5
-      parent: 1
-    - type: Physics
-      bodyType: Static
   - uid: 1428
     components:
     - type: Transform
@@ -1537,10 +1483,10 @@ entities:
       parent: 1
 - proto: BiomassReclaimer
   entities:
-  - uid: 722
+  - uid: 802
     components:
     - type: Transform
-      pos: -6.5,-15.5
+      pos: -8.5,-12.5
       parent: 1
 - proto: BorgCharger
   entities:
@@ -1597,10 +1543,10 @@ entities:
       parent: 1
 - proto: BoxBodyBag
   entities:
-  - uid: 1150
+  - uid: 764
     components:
     - type: Transform
-      pos: -6.7670183,-16.647583
+      pos: -8.991088,-12.998157
       parent: 1
 - proto: BoxFolderBase
   entities:
@@ -3707,6 +3653,16 @@ entities:
     - type: Transform
       pos: -1.5,6.5
       parent: 1
+    - type: ContainerContainer
+      containers:
+        ShipyardConsole-targetId: !type:ContainerSlot
+          showEnts: False
+          occludes: True
+          ent: null
+        board: !type:Container
+          showEnts: False
+          occludes: True
+          ents: []
 - proto: Chair
   entities:
   - uid: 739
@@ -3815,13 +3771,6 @@ entities:
     components:
     - type: Transform
       pos: 3.5,-8.5
-      parent: 1
-- proto: CloningPod
-  entities:
-  - uid: 720
-    components:
-    - type: Transform
-      pos: -4.5,-16.5
       parent: 1
 - proto: ClosetL3VirologyFilled
   entities:
@@ -3964,12 +3913,6 @@ entities:
       rot: 1.5707963267948966 rad
       pos: -1.5,-7.5
       parent: 1
-  - uid: 1282
-    components:
-    - type: Transform
-      rot: 3.141592653589793 rad
-      pos: -5.5,-17.5
-      parent: 1
   - uid: 1283
     components:
     - type: Transform
@@ -4044,21 +3987,6 @@ entities:
     components:
     - type: Transform
       pos: 2.5316,-1.4875672
-      parent: 1
-- proto: ClothingOuterHardsuitVoidParamed
-  entities:
-  - uid: 1148
-    components:
-    - type: Transform
-      pos: 5.384019,-5.6894855
-      parent: 1
-- proto: ComputerCloningConsole
-  entities:
-  - uid: 721
-    components:
-    - type: Transform
-      rot: 3.141592653589793 rad
-      pos: -3.5,-16.5
       parent: 1
 - proto: ComputerCrewMonitoring
   entities:
@@ -4562,10 +4490,10 @@ entities:
       parent: 1
     - type: Fixtures
       fixtures: {}
-  - uid: 1434
+  - uid: 766
     components:
     - type: Transform
-      pos: -5.5,-15.5
+      pos: -8.5,-12.5
       parent: 1
     - type: Fixtures
       fixtures: {}
@@ -4585,6 +4513,19 @@ entities:
       parent: 1
     - type: AtmosPipeColor
       color: '#FF0000FF'
+- proto: GasMixerOn
+  entities:
+  - uid: 702
+    components:
+    - type: Transform
+      rot: -1.5707963267948966 rad
+      pos: 11.5,-14.5
+      parent: 1
+    - type: GasMixer
+      inletTwoConcentration: 0.79
+      inletOneConcentration: 0.21
+    - type: AtmosPipeColor
+      color: '#0055CCFF'
 - proto: GasPassiveVent
   entities:
   - uid: 778
@@ -4605,6 +4546,14 @@ entities:
       color: '#FF0000FF'
 - proto: GasPipeBend
   entities:
+  - uid: 40
+    components:
+    - type: Transform
+      rot: -1.5707963267948966 rad
+      pos: 12.5,-14.5
+      parent: 1
+    - type: AtmosPipeColor
+      color: '#0055CCFF'
   - uid: 765
     components:
     - type: Transform
@@ -4628,18 +4577,6 @@ entities:
       parent: 1
     - type: AtmosPipeColor
       color: '#0000FFFF'
-  - uid: 802
-    components:
-    - type: Transform
-      rot: 3.141592653589793 rad
-      pos: 11.5,-13.5
-      parent: 1
-  - uid: 804
-    components:
-    - type: Transform
-      rot: -1.5707963267948966 rad
-      pos: 12.5,-14.5
-      parent: 1
   - uid: 880
     components:
     - type: Transform
@@ -4771,6 +4708,20 @@ entities:
       color: '#FF0000FF'
 - proto: GasPipeStraight
   entities:
+  - uid: 720
+    components:
+    - type: Transform
+      pos: 12.5,-13.5
+      parent: 1
+    - type: AtmosPipeColor
+      color: '#0055CCFF'
+  - uid: 721
+    components:
+    - type: Transform
+      pos: 11.5,-13.5
+      parent: 1
+    - type: AtmosPipeColor
+      color: '#0055CCFF'
   - uid: 773
     components:
     - type: Transform
@@ -5746,12 +5697,6 @@ entities:
       parent: 1
     - type: AtmosPipeColor
       color: '#0000FFFF'
-  - uid: 803
-    components:
-    - type: Transform
-      rot: -1.5707963267948966 rad
-      pos: 12.5,-13.5
-      parent: 1
   - uid: 813
     components:
     - type: Transform
@@ -5918,16 +5863,20 @@ entities:
       rot: -1.5707963267948966 rad
       pos: 7.5,-10.5
       parent: 1
-  - uid: 764
-    components:
-    - type: Transform
-      pos: 11.5,-12.5
-      parent: 1
-  - uid: 766
+  - uid: 716
     components:
     - type: Transform
       pos: 12.5,-12.5
       parent: 1
+    - type: AtmosPipeColor
+      color: '#0055CCFF'
+  - uid: 719
+    components:
+    - type: Transform
+      pos: 11.5,-12.5
+      parent: 1
+    - type: AtmosPipeColor
+      color: '#0055CCFF'
 - proto: GasPressurePump
   entities:
   - uid: 774
@@ -5942,18 +5891,6 @@ entities:
       color: '#0000FFFF'
     - type: Label
       currentLabel: Distro to Cryo
-  - uid: 894
-    components:
-    - type: MetaData
-      name: gas pump (Port to Distro)
-    - type: Transform
-      rot: -1.5707963267948966 rad
-      pos: 11.5,-14.5
-      parent: 1
-    - type: AtmosPipeColor
-      color: '#0000FFFF'
-    - type: Label
-      currentLabel: Port to Distro
 - proto: GasThermoMachineFreezer
   entities:
   - uid: 692
@@ -6918,26 +6855,8 @@ entities:
   - uid: 634
     components:
     - type: Transform
-      pos: -1.5,-12.5
+      pos: -3.5,-16.5
       parent: 1
-    - type: EntityStorage
-      air:
-        volume: 200
-        immutable: False
-        temperature: 293.14923
-        moles:
-        - 1.7459903
-        - 6.568249
-        - 0
-        - 0
-        - 0
-        - 0
-        - 0
-        - 0
-        - 0
-        - 0
-        - 0
-        - 0
 - proto: LockerPilotFilled
   entities:
   - uid: 614
@@ -6975,13 +6894,6 @@ entities:
     - type: Transform
       pos: 6.5,-7.5
       parent: 1
-- proto: MaterialBiomass
-  entities:
-  - uid: 1151
-    components:
-    - type: Transform
-      pos: -5.5790863,-16.449692
-      parent: 1
 - proto: MedicalBed
   entities:
   - uid: 694
@@ -7003,13 +6915,6 @@ entities:
     components:
     - type: Transform
       pos: 4.5,1.5
-      parent: 1
-- proto: MedicalScanner
-  entities:
-  - uid: 719
-    components:
-    - type: Transform
-      pos: -2.5,-16.5
       parent: 1
 - proto: MedicalTechFab
   entities:
@@ -7079,11 +6984,6 @@ entities:
     - type: Transform
       pos: -9.5,-12.5
       parent: 1
-  - uid: 716
-    components:
-    - type: Transform
-      pos: -8.5,-12.5
-      parent: 1
   - uid: 717
     components:
     - type: Transform
@@ -7095,13 +6995,6 @@ entities:
     - type: Transform
       rot: 3.141592653589793 rad
       pos: -9.5,-15.5
-      parent: 1
-- proto: NetworkConfigurator
-  entities:
-  - uid: 702
-    components:
-    - type: Transform
-      pos: -6.048698,-16.522701
       parent: 1
 - proto: NFSignDock
   entities:
@@ -7135,6 +7028,16 @@ entities:
     - type: Transform
       pos: -5.5,-19.5
       parent: 1
+- proto: NitrogenCanister
+  entities:
+  - uid: 722
+    components:
+    - type: Transform
+      anchored: True
+      pos: 11.5,-12.5
+      parent: 1
+    - type: Physics
+      bodyType: Static
 - proto: NitrousOxideCanister
   entities:
   - uid: 1375
@@ -7154,6 +7057,16 @@ entities:
     - type: Transform
       pos: -4.5,-8.5
       parent: 1
+- proto: OxygenCanister
+  entities:
+  - uid: 527
+    components:
+    - type: Transform
+      anchored: True
+      pos: 12.5,-12.5
+      parent: 1
+    - type: Physics
+      bodyType: Static
 - proto: PaperBin10
   entities:
   - uid: 736
@@ -7172,14 +7085,6 @@ entities:
     components:
     - type: Transform
       pos: 4.5,-16.5
-      parent: 1
-- proto: PosterContrabandBorgFancyv2
-  entities:
-  - uid: 1275
-    components:
-    - type: Transform
-      rot: 1.5707963267948966 rad
-      pos: -10.5,-12.5
       parent: 1
 - proto: PosterLegitAnatomyPoster
   entities:
@@ -8143,6 +8048,23 @@ entities:
         - 0
         - 0
         - 0
+- proto: SuitStorageParamedic
+  entities:
+  - uid: 528
+    components:
+    - type: Transform
+      pos: -4.5,-16.5
+      parent: 1
+  - uid: 803
+    components:
+    - type: Transform
+      pos: -2.5,-16.5
+      parent: 1
+  - uid: 882
+    components:
+    - type: Transform
+      pos: -6.5,-16.5
+      parent: 1
 - proto: TableGlass
   entities:
   - uid: 131
@@ -8185,18 +8107,6 @@ entities:
     - type: Transform
       rot: 3.141592653589793 rad
       pos: 7.5,9.5
-      parent: 1
-  - uid: 527
-    components:
-    - type: Transform
-      rot: -1.5707963267948966 rad
-      pos: -6.5,-16.5
-      parent: 1
-  - uid: 528
-    components:
-    - type: Transform
-      rot: -1.5707963267948966 rad
-      pos: -5.5,-16.5
       parent: 1
   - uid: 529
     components:
@@ -8607,6 +8517,13 @@ entities:
     components:
     - type: Transform
       pos: -6.5,9.5
+      parent: 1
+- proto: VendingMachineTankDispenserEVA
+  entities:
+  - uid: 804
+    components:
+    - type: Transform
+      pos: -5.5,-16.5
       parent: 1
 - proto: VendingMachineWallMedical
   entities:
