--- a/Resources/Prototypes/Entities/Objects/Materials/crystal_shard.yml
+++ b/Resources/Prototypes/Entities/Objects/Materials/crystal_shard.yml
@@ -41,15 +41,14 @@
     price: 50
   - type: Extractable
     grindableSolutionName: food
-  - type: SolutionContainerManager
-    solutions:
-      food:
-        reagents:
-        - ReagentId: Ethanol
-          Quantity: 5
-        - ReagentId: Sugar
-          Quantity: 15
-
+  - type: SolutionContainerManager # Frontier
+    solutions: # Frontier
+      food: # Frontier
+        reagents: # Frontier
+        - ReagentId: Ethanol # Frontier
+          Quantity: 5 # Frontier
+        - ReagentId: Sugar # Frontier
+          Quantity: 15 # Frontier
 
 - type: entity
   parent: ShardCrystalBase
