--- a/Resources/Prototypes/Entities/Objects/Materials/crystal_shard.yml
+++ b/Resources/Prototypes/Entities/Objects/Materials/crystal_shard.yml
@@ -39,8 +39,8 @@
         acts: [ "Destruction" ]
   - type: StaticPrice
     price: 50
-  - type: Extractable
-    grindableSolutionName: food
+  - type: Extractable # Frontier
+    grindableSolutionName: food # Frontier
   - type: SolutionContainerManager # Frontier
     solutions: # Frontier
       food: # Frontier
