--- a/Resources/Maps/_NF/Shuttles/mccargo.yml
+++ b/Resources/Maps/_NF/Shuttles/mccargo.yml
@@ -1208,6 +1208,7 @@ entities:
   - uid: 392
     components:
     - type: Transform
+      rot: 3.141592653589793 rad
       pos: 3.5,9.5
       parent: 1
   - uid: 394
