--- a/Resources/Prototypes/_NF/Entities/Objects/Devices/production.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Devices/production.yml
@@ -265,6 +265,23 @@
         Cable: 4
 
 - type: entity
+  id: SyndicateElectricRangeMachineCircuitboard
+  parent: BaseMachineCircuitboard
+  name: syndicate electric range machine board
+  description: A machine printed circuit board for an syndicate electric range.
+  components:
+    - type: Sprite
+      state: service
+    - type: MachineBoard
+      prototype: SyndicateKitchenElectricRange
+      requirements:
+        Capacitor: 3
+      stackRequirements:
+        Steel: 5
+        Glass: 2
+        Cable: 4
+
+- type: entity
   id: KitchenAssemblerMachineCircuitboard
   parent: BaseMachineCircuitboard
   name: food-o-mat machine board
