--- a/Resources/Maps/_NF/POI/cove.yml
+++ b/Resources/Maps/_NF/POI/cove.yml
@@ -7840,7 +7840,7 @@ entities:
       rot: -1.5707963267948966 rad
       pos: 4.5,5.5
       parent: 1
-- proto: KitchenElectricRange
+- proto: SyndicateKitchenElectricRange
   entities:
   - uid: 774
     components:
