biomass from plants

--- a/Resources/Prototypes/_NF/Entities/Objects/base_recyclable_items.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/base_recyclable_items.yml
@@ -110,7 +110,7 @@
 
 # Organic
 ## Tiny
-- type: entity # Seeds, candles etc
+- type: entity # Soap, candles, seeds etc
   id: RecyclableItemOrganicTiny
   abstract: true
   components:
