Adds carpets to the tile cutter.

--- a/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
@@ -1528,6 +1528,22 @@
       - FloorTileItemKitchen # Frontier
       - FloorTileItemLaundry # Frontier
       - SheetPaper # Frontier
+      - Carpet # Frontier
+      - CarpetBlack # Frontier
+      - CarpetPink # Frontier
+      - CarpetBlue # Frontier
+      - CarpetGreen # Frontier
+      - CarpetOrange # Frontier
+      - CarpetPurple # Frontier
+      - FloorCarpetItemSkyBlue # Frontier
+      - CarpetCyan # Frontier
+      - CarpetWhite # Frontier
+      - FloorTileItemCarpetClown # Frontier
+      - FloorTileItemCarpetOffice # Frontier
+      - FloorTileItemEighties # Frontier
+      - FloorTileItemArcadeBlue # Frontier
+      - FloorTileItemArcadeBlue2 # Frontier
+      - FloorTileItemArcadeRed # Frontier
     dynamicRecipes:
     - FauxTileAstroGrass # Frontier
     - FauxTileAstroIce # Frontier
