Move plasma into fuel locker

--- a/Resources/Maps/_NF/Shuttles/pts.yml
+++ b/Resources/Maps/_NF/Shuttles/pts.yml
@@ -1107,6 +1107,14 @@ entities:
     - type: Transform
       pos: 1.5,3.5
       parent: 2
+- proto: LockerWallMaterialsFuelPlasmaFilled
+  entities:
+  - uid: 184
+    components:
+    - type: Transform
+      rot: -1.5707963267948966 rad
+      pos: 0.5,-4.5
+      parent: 2
 - proto: NitrogenCanister
   entities:
   - uid: 80
@@ -1206,13 +1214,6 @@ entities:
     - type: Transform
       rot: 1.5707963267948966 rad
       pos: -0.5,3.5
-      parent: 2
-- proto: SheetPlasma
-  entities:
-  - uid: 184
-    components:
-    - type: Transform
-      pos: -0.5,-4.5
       parent: 2
 - proto: ShuttleWindow
   entities:
