--- a/Resources/Maps/_NF/Shuttles/apothecary.yml
+++ b/Resources/Maps/_NF/Shuttles/apothecary.yml
@@ -997,6 +997,13 @@ entities:
     - type: Transform
       pos: -4.5,3.5
       parent: 1
+- proto: BannerMedical
+  entities:
+  - uid: 292
+    components:
+    - type: Transform
+      pos: 0.5,-3.5
+      parent: 1
 - proto: BedsheetMedical
   entities:
   - uid: 137
@@ -1408,6 +1415,7 @@ entities:
       pos: -1.5,6.5
       parent: 1
     - type: ItemPlacer
+      lastPlaceable: False
       placedEntities:
       - 221
     - type: PlaceableSurface
@@ -1433,13 +1441,6 @@ entities:
     components:
     - type: Transform
       pos: -3.5210888,-2.1972485
-      parent: 1
-- proto: ClothingOuterCoatLabChem
-  entities:
-  - uid: 245
-    components:
-    - type: Transform
-      pos: -1.4726316,2.2593617
       parent: 1
 - proto: ComputerTabletopCrewMonitoring
   entities:
@@ -1554,11 +1555,6 @@ entities:
       parent: 1
 - proto: EmergencyRollerBed
   entities:
-  - uid: 292
-    components:
-    - type: Transform
-      pos: 0.62088865,-3.4683585
-      parent: 1
   - uid: 315
     components:
     - type: Transform
@@ -2247,7 +2243,8 @@ entities:
   - uid: 167
     components:
     - type: Transform
-      pos: -1.6666503,2.7190852
+      rot: 3.141592653589793 rad
+      pos: -1.6407223,5.6968827
       parent: 1
 - proto: HospitalCurtainsOpen
   entities:
@@ -2279,6 +2276,52 @@ entities:
       parent: 1
     - type: CollisionWake
       enabled: False
+- proto: LockableButtonExternal
+  entities:
+  - uid: 364
+    components:
+    - type: Transform
+      rot: 3.141592653589793 rad
+      pos: 0.0949074,6.979876
+      parent: 1
+    - type: DeviceLinkSource
+      linkedPorts:
+        2:
+        - Pressed: DoorBolt
+        61:
+        - Pressed: DoorBolt
+        55:
+        - Pressed: DoorBolt
+        65:
+        - Pressed: DoorBolt
+  - uid: 411
+    components:
+    - type: Transform
+      rot: 3.141592653589793 rad
+      pos: -1.9277914,7.495636
+      parent: 1
+    - type: DeviceLinkSource
+      linkedPorts:
+        293:
+        - Pressed: Toggle
+        339:
+        - Pressed: Toggle
+        336:
+        - Pressed: Toggle
+        158:
+        - Pressed: Toggle
+        202:
+        - Pressed: Toggle
+        277:
+        - Pressed: Toggle
+        355:
+        - Pressed: Toggle
+        358:
+        - Pressed: Toggle
+        213:
+        - Pressed: Toggle
+        270:
+        - Pressed: Toggle
 - proto: LockerMedicineFilled
   entities:
   - uid: 290
@@ -2286,31 +2329,13 @@ entities:
     - type: Transform
       pos: 4.5,5.5
       parent: 1
-- proto: LockerWallChemistryFilled
+- proto: LockerWallColorChemistryFilled
   entities:
-  - uid: 364
+  - uid: 229
     components:
     - type: Transform
       pos: -2.5,7.5
       parent: 1
-    - type: EntityStorage
-      air:
-        volume: 200
-        immutable: False
-        temperature: 293.14917
-        moles:
-        - 1.734816
-        - 6.5262127
-        - 0
-        - 0
-        - 0
-        - 0
-        - 0
-        - 0
-        - 0
-        - 0
-        - 0
-        - 0
     - type: ContainerContainer
       containers:
         entity_storage: !type:Container
@@ -2321,14 +2346,24 @@ entities:
           showEnts: False
           occludes: True
           ent: null
-- proto: LockerWallEVAColorMedicalFilled
+- proto: LockerWallColorMedicalDoctorFilled
   entities:
-  - uid: 357
+  - uid: 245
     components:
     - type: Transform
-      rot: 1.5707963267948966 rad
-      pos: -1.5,-3.5
+      rot: 3.141592653589793 rad
+      pos: -2.5,2.5
       parent: 1
+    - type: ContainerContainer
+      containers:
+        entity_storage: !type:Container
+          showEnts: False
+          occludes: True
+          ents: []
+        paper_label: !type:ContainerSlot
+          showEnts: False
+          occludes: True
+          ent: null
 - proto: LockerWallEVAColorParamedicFilled
   entities:
   - uid: 141
@@ -2341,6 +2376,14 @@ entities:
     - type: Transform
       pos: 5.5,0.5
       parent: 1
+- proto: LockerWallMaterialsBasicFilled
+  entities:
+  - uid: 319
+    components:
+    - type: Transform
+      rot: 1.5707963267948966 rad
+      pos: 2.5,-2.5
+      parent: 1
 - proto: LockerWallMaterialsFuelUraniumFilled
   entities:
   - uid: 160
@@ -2348,14 +2391,6 @@ entities:
     - type: Transform
       rot: -1.5707963267948966 rad
       pos: -1.5,-2.5
-      parent: 1
-- proto: LockerWallMedicalDoctorFilled
-  entities:
-  - uid: 309
-    components:
-    - type: Transform
-      rot: 3.141592653589793 rad
-      pos: -2.5,2.5
       parent: 1
 - proto: LuxuryPen
   entities:
@@ -2378,6 +2413,27 @@ entities:
     - type: Transform
       pos: -3.5,4.5
       parent: 1
+- proto: MedicalAssembler
+  entities:
+  - uid: 309
+    components:
+    - type: Transform
+      pos: 3.5,3.5
+      parent: 1
+    - type: ContainerContainer
+      containers:
+        machine_board: !type:Container
+          showEnts: False
+          occludes: True
+          ents: []
+        machine_parts: !type:Container
+          showEnts: False
+          occludes: True
+          ents: []
+        microwave_entity_container: !type:Container
+          showEnts: False
+          occludes: True
+          ents: []
 - proto: MedicalBed
   entities:
   - uid: 178
@@ -2397,6 +2453,20 @@ entities:
     - type: Transform
       pos: 2.5,2.5
       parent: 1
+    - type: ContainerContainer
+      containers:
+        machine_board: !type:Container
+          showEnts: False
+          occludes: True
+          ents: []
+        machine_parts: !type:Container
+          showEnts: False
+          occludes: True
+          ents: []
+        blueprint: !type:Container
+          showEnts: False
+          occludes: True
+          ents: []
 - proto: NFPosterContrabandFsbApothecary
   entities:
   - uid: 289
@@ -2410,6 +2480,32 @@ entities:
     components:
     - type: Transform
       pos: 3.5,1.5
+      parent: 1
+- proto: NFSignDock
+  entities:
+  - uid: 237
+    components:
+    - type: Transform
+      pos: 2.5,-4.5
+      parent: 1
+  - uid: 248
+    components:
+    - type: Transform
+      pos: -1.5,-4.5
+      parent: 1
+- proto: NFSignEms2
+  entities:
+  - uid: 357
+    components:
+    - type: Transform
+      rot: 3.141592653589793 rad
+      pos: 4.5,7.5
+      parent: 1
+  - uid: 372
+    components:
+    - type: Transform
+      rot: 3.141592653589793 rad
+      pos: 0.5,-4.5
       parent: 1
 - proto: NitrogenCanister
   entities:
@@ -2461,8 +2557,8 @@ entities:
       pos: -2.5,-2.5
       parent: 1
     - type: FuelGenerator
-      targetPower: 16000
-      on: False     
+      targetPower: 17000
+      on: False
     - type: Physics
       bodyType: Static
 - proto: PosterLegitSMHardhats
@@ -2492,8 +2588,7 @@ entities:
   - uid: 317
     components:
     - type: Transform
-      rot: 1.5707963267948966 rad
-      pos: 3.5,3.5
+      pos: -1.5,2.5
       parent: 1
 - proto: Poweredlight
   entities:
@@ -2853,31 +2948,6 @@ entities:
       rot: 1.5707963267948966 rad
       pos: 6.5,-2.5
       parent: 1
-- proto: SignMedical
-  entities:
-  - uid: 319
-    components:
-    - type: Transform
-      pos: 4.5,7.5
-      parent: 1
-  - uid: 372
-    components:
-    - type: Transform
-      rot: 3.141592653589793 rad
-      pos: 0.5,-4.5
-      parent: 1
-- proto: NFSignDock
-  entities:
-  - uid: 237
-    components:
-    - type: Transform
-      pos: 2.5,-4.5
-      parent: 1
-  - uid: 248
-    components:
-    - type: Transform
-      pos: -1.5,-4.5
-      parent: 1
 - proto: SignSpace
   entities:
   - uid: 149
@@ -2924,6 +2994,8 @@ entities:
       parent: 1
     - type: ApcPowerReceiver
       powerLoad: 1
+    - type: DeviceLinkSink
+      invokeCounter: 1
   - uid: 339
     components:
     - type: Transform
@@ -2963,14 +3035,6 @@ entities:
     - type: Transform
       pos: -2.5,0.5
       parent: 1
-- proto: TableCounterMetal
-  entities:
-  - uid: 134
-    components:
-    - type: Transform
-      rot: 1.5707963267948966 rad
-      pos: 3.5,3.5
-      parent: 1
 - proto: TableReinforced
   entities:
   - uid: 14
@@ -3002,16 +3066,16 @@ entities:
       rot: 3.141592653589793 rad
       pos: -1.5,4.5
       parent: 1
+  - uid: 134
+    components:
+    - type: Transform
+      pos: -1.5,2.5
+      parent: 1
   - uid: 217
     components:
     - type: Transform
       rot: -1.5707963267948966 rad
       pos: -0.5,9.5
-      parent: 1
-  - uid: 229
-    components:
-    - type: Transform
-      pos: -1.5,2.5
       parent: 1
   - uid: 302
     components:
