Added Honker and Sparrow to guidebook (#2150)
Co-authored-by: Whatstone <166147148+whatston3@users.noreply.github.com>
Co-authored-by: Dvir <39403717+dvir001@users.noreply.github.com>
Co-authored-by: ErhardSteinhauer <65374927+ErhardSteinhauer@users.noreply.github.com>

--- a/Resources/Prototypes/_NF/Guidebook/shuttle_maps.yml
+++ b/Resources/Prototypes/_NF/Guidebook/shuttle_maps.yml
@@ -180,6 +180,18 @@
 
 - type: entity
   parent: PosterBase
+  id: ShuttleMapHonker
+  name: "NT Honker"
+  description: "Detailed map of a Honker shuttle."
+  categories: [ HideSpawnMenu ]
+  components:
+  - type: Sprite
+    sprite: _NF/Guidebook/shuttle_maps/128x96.rsi
+    state: honker
+    scale: 1.2, 1.2
+
+- type: entity
+  parent: PosterBase
   id: ShuttleMapInvestigator
   name: "NR Investigator"
   description: "Detailed map of a Investigator shuttle."
@@ -320,6 +332,18 @@
   - type: Sprite
     sprite: _NF/Guidebook/shuttle_maps/128x96.rsi
     state: searchlight
+    scale: 1.2, 1.2
+
+- type: entity
+  parent: PosterBase
+  id: ShuttleMapSparrow
+  name: "NR Sparrow"
+  description: "Detailed map of a Sparrow shuttle."
+  categories: [ HideSpawnMenu ]
+  components:
+  - type: Sprite
+    sprite: _NF/Guidebook/shuttle_maps/128x96.rsi
+    state: sparrow
     scale: 1.2, 1.2
 
 - type: entity
