--- a/Resources/Prototypes/_NF/Guidebook/shipyard.yml
+++ b/Resources/Prototypes/_NF/Guidebook/shipyard.yml
@@ -24,6 +24,7 @@
   - ShipyardHammer
   - ShipyardHauler
   - ShipyardHarbormaster
+  - ShipyardHonker
   - ShipyardInvestigator
   - ShipyardKestrel
   - ShipyardKilderkin
@@ -38,6 +39,7 @@
   - ShipyardPlacebo
   - ShipyardProspector
   - ShipyardSearchlight
+  - ShipyardSparrow
   - ShipyardSkipper
   - ShipyardSpirit
   - ShipyardStasis
@@ -144,6 +146,11 @@
   text: "/ServerInfo/_NF/Guidebook/Shipyard/Hauler.xml"
 
 - type: guideEntry
+  id: ShipyardHonker
+  name: guide-entry-shipyard-honker
+  text: "/ServerInfo/_NF/Guidebook/Shipyard/Honker.xml"
+
+- type: guideEntry
   id: ShipyardInvestigator
   name: guide-entry-shipyard-investigator
   text: "/ServerInfo/_NF/Guidebook/Shipyard/Investigator.xml"
@@ -212,6 +219,11 @@
   id: ShipyardSearchlight
   name: guide-entry-shipyard-searchlight
   text: "/ServerInfo/_NF/Guidebook/Shipyard/Searchlight.xml"
+
+- type: guideEntry
+  id: ShipyardSparrow
+  name: guide-entry-shipyard-sparrow
+  text: "/ServerInfo/_NF/Guidebook/Shipyard/Sparrow.xml"
 
 - type: guideEntry
   id: ShipyardSkipper
