belts are large

--- a/Resources/Prototypes/_NF/Entities/Clothing/Belt/base_clothing_belt.yml
+++ b/Resources/Prototypes/_NF/Entities/Clothing/Belt/base_clothing_belt.yml
@@ -5,14 +5,14 @@
   id: NFClothingBeltStorageBase
   components:
   - type: Storage
-    maxItemSize: Small
+    maxItemSize: Normal
     defaultStorageOrientation: Vertical
     grid:
     - 0,0,7,1
   - type: Item
-    size: Normal
+    size: Large
     shape:
-    - 0,0,3,3
+    - 0,0,4,3
 
 - type: entity
   abstract: true
@@ -22,7 +22,7 @@
   - type: BallisticAmmoProvider
     mayTransfer: true
   - type: Item
-    size: Normal
+    size: Large
     shape:
     - 0,0,3,3
   - type: ContainerContainer
