DeepFryer safety, remove most arbitrage, bk2ships

--- a/Resources/Prototypes/Entities/Objects/Misc/fluff_lights.yml
+++ b/Resources/Prototypes/Entities/Objects/Misc/fluff_lights.yml
@@ -290,4 +290,4 @@
         layer:
         - MachineLayer
   - type: StaticPrice # Frontier
-    price: 6 # Frontier
+    price: 3 # Frontier: TODO - tests at 6
