--- a/Resources/Prototypes/Entities/Objects/Tools/inflatable_wall.yml
+++ b/Resources/Prototypes/Entities/Objects/Tools/inflatable_wall.yml
@@ -24,9 +24,9 @@
       tags:
         - DroneUsable
     - type: StaticPrice # Frontier
-      price: 0 # Frontier
-    - type: StackPrice # Frontier
-      price: 7.5 # Frontier: TODO: fix value
+      price: 7.5 # Frontier - tests at 0
+    # - type: StackPrice # Frontier
+    #   price: 7.5 # Frontier: TODO: fix value
 # TODO: Add stack sprites + visuals.
 
 - type: entity
@@ -55,9 +55,9 @@
       tags:
         - DroneUsable
     - type: StaticPrice # Frontier
-      price: 0 # Frontier
-    - type: StackPrice # Frontier
-      price: 15 # Frontier: TODO: fix value
+      price: 15 # Frontier - TODO: tests at 0
+    # - type: StackPrice # Frontier
+    #   price: 15 # Frontier: TODO: fix value
 # TODO: Add stack sprites + visuals.
 
 - type: entity
