--- a/Resources/Prototypes/Entities/Structures/Machines/Computers/computers.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/Computers/computers.yml
@@ -843,7 +843,7 @@
       enum.WiresUiKey.Key:
         type: WiresBoundUserInterface
   - type: Computer
-    board: CargoRequestComputerCircuitboard
+    board: Null # Frontier: CargoRequestComputerCircuitboard<Null
   - type: PointLight
     radius: 1.5
     energy: 1.6
