--- a/Resources/Prototypes/_NF/Entities/Objects/Weapons/Guns/base_turret.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Weapons/Guns/base_turret.yml
@@ -175,5 +175,5 @@
   - type: BatterySelfRecharger
     autoRecharge: true
     autoRechargeRate: 5
-  - type: StaticPrice
-    price: 50
+  # - type: StaticPrice # for arbitrage tests
+  #   price: 50
